FetchObjective remove items properly